--- a/src/views/model-view.ejs
+++ b/src/views/model-view.ejs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<%=data%>
-<body>
-    
+    <title>Model show</title>
     <script>
-        <!-- console.log(<%=data%>) -->
+        const modelUrl = "<%=modelUrl%>";
     </script>
+
+</head>
+
+<body>
+    <div id="canvas-container"></div>
+    <script src="/js/model-view.js" type="module"></script>
 </body>
+
 </html>
