--- a/src/views/files-view.ejs
+++ b/src/views/files-view.ejs
@@ -6,32 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All file exist</title>
-    <script>
-        const oneFileExample = {
-            length: 15456676,
-            chunkSize: 261120,
-            uploadDate: {
-                date: "2023-04-06T07:32:52.155Z",
-            },
-            filename: "test3.glb",
-            contentType: "application/octet-stream",
-        };
-        const listFileExample = [];
-    </script>
+    <script src="/js/files-view.js"></script>
+    <link rel="stylesheet" href="/css/files-view.css">
 </head>
 
 <body>
-    <!-- ejs loop example -->
-    <ul>
-        <% files.forEach((file)=> { %>
-            <li>
-                <a href="<%=env.SERVER_URL%>:<%=env.PORT%>/view/<%=file.filename%>">
-                    <%=file.filename%>
-                </a>
-            </li>
-            <% }) %>
-    </ul>
+    <!-- ejs loop -->
+    <div id="container">
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Upload Date</th>
+                <th>Length (bytes)</th>
+            </tr>
+            <% files.forEach((file)=> { %>
+                <tr>
+                    <td class="model-name">
+                        <a onclick=loadFrameToViewModel(event) viewUrl="<%=file.viewUrl%>"
+                            downloadUrl="<%=file.downloadUrl%>" fullName="<%=file.filename%>"
+                            originalName="<%=file.originalName%>" title="Click to view model">
+                            <%=file.originalName%>
+                        </a>
+                    </td>
+                    <td>
+                        <%=(new Date(file.uploadDate)).toLocaleString()%>
+                    </td>
+                    <td>
+                        <%=file.length%>
+                    </td>
+                </tr>
+                <% }) %>
 
+        </table>
+        <iframe id="view-frame" scrolling="no" src="/views/empty-view.html" frameborder="0"></iframe>
+
+    </div>
 </body>
 
 </html>
