--- a/src/public/views/empty-view.html
+++ b/src/public/views/empty-view.html
@@ -7,16 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empty-view</title>
     <style>
-        span#main-content {
-            align-self: center;
+        div#main-content {
+            padding: 100px;
         }
     </style>
 </head>
 
 <body>
-    <span id="main-content">
-        Click model to show
-    </span>
+    <div id="main-content">
+        <span>
+            Click model to show
+        </span>
+    </div>
 </body>
 
 </html>
