update import export

--- a/src/views/files-view.ejs
+++ b/src/views/files-view.ejs
@@ -54,7 +54,7 @@
                             <td class="model-name" onclick=loadFrameToViewModel(event) viewUrl="<%=file.viewUrl%>"
                                 downloadUrl="<%=file.downloadUrl%>" fullName="<%=file.filename%>"
                                 deleteUrl="<%=file.deleteUrl%>" originalName="<%=file.originalName%>"
-                                title="Click to view model" isModelName>
+                                title="Click to view model <%=file.filename%>" isModelName>
                                 <%=file.originalName%>
                             </td>
                             <td>
