--- a/src/public/css/modify-page.css
+++ b/src/public/css/modify-page.css
@@ -3,24 +3,33 @@ body {
     overflow: hidden;
 }
 
-.btn-primary {
+section {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+}
+
+form {
+    padding: 0.5em 1em;
+}
+
+.btn {
     width: 100%;
-    background-color: #009879;
-    border-color: #009879;
+    margin-bottom: 2px;
 }
 
-.container-fluid,
-._model-properties,
-._group-properties {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+.section-content {
+    width: 100%;
+    margin: 0 auto;
 }
 
-.section-header {
-    text-align: left;
-    padding-left: 0.75em;
-    font-size: 1.4em;
-    font-weight: bold;
+.coordination-box {
+    display: flex;
+    flex-direction: row;
+}
+
+.coordination-box .input-box {
+    flex-direction: column;
 }
 
 .input-header {
@@ -37,7 +46,8 @@ body {
 
 .input-box input,
 .input-box select,
-.input-box button {
+.input-box button,
+.check-box input {
     text-align: center;
     border-radius: 0.375em;
     margin-bottom: 0.5em;
@@ -50,6 +60,13 @@ body {
 
 .input-box button {
     width: 30%;
+}
+
+.check-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #control-container {
