--- a/src/views/model-view.ejs
+++ b/src/views/model-view.ejs
@@ -22,6 +22,16 @@
             window.parent.postMessage(fileInfo, window.location.origin);
         }
     </script>
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@v0.149.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@v0.149.0/examples/jsm/"
+        }
+      }
+    </script>
 </head>
 
 <body>
